--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,15 +1,12 @@
 body {
     background-image: url("../images/background.jpg");
     background-repeat: repeat;
-    font-family: 'Indie Flower', cursive;
-    margin: auto;
 }
 
 img {
-    height: 50px;
-    width: 50px;
-    border: 3px solid #652762;
-    padding: 10px;
+    height: 75px;
+    width: 75px;
+    padding: 17px;
 }
 
 
@@ -19,10 +16,11 @@ img {
     font-size: 48px;
     background-color: #fff;
     height: 100px;
-    width: 400px;
+    width: 450px;
     text-align: center;
+    padding: 30px;
     padding-top: 50px;
-    margin-top: 10px;
+    margin: 25px;
     border: 3px solid #652762;
     color: #652762;
 }
@@ -32,20 +30,83 @@ img {
     font-size: 18px;
     background-color: #fff;
     text-align: center;
+    margin: 25px;
     padding: 30px;
-    margin-top: 50px;
     border: 3px solid #652762;
     color: #652762;
-    width: 400px;
+    width: 450px;
+    font-family: 'Montserrat', sans-serif;
 
 }
 
 #container {
-    height: 75px;
-    width: 250px;
+    height: 125px;
+    width: 450px;
     background-color: white;
     border: 3px solid #652762;
     padding-top: 30px;
-    padding-left: 30px;
-    margin: 50px;
+    margin: 25px;
+    padding: 30px;
+}
+
+
+#computerNumber {
+    height: 75px;
+    width: 225px;
+    background-color: white;
+    border: 3px solid #652762;
+    padding-top: 30px;
+    margin: 25px;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 20px;
+    text-align: center;
+    float: left;
+    clear: both;
+}
+
+#score {
+    height: 75px;
+    width: 225px;
+    background-color: white;
+    border: 3px solid #652762;
+    padding-top: 30px;
+    margin: 25px;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 20px;
+    text-align: center;
+    float: left;
+    clear: right;
+}
+
+#wins {
+    height: 75px;
+    width: 225px;
+    background-color: white;
+    border: 3px solid #652762;
+    padding-top: 30px;
+    margin: 25px;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 20px;
+    text-align: center;
+    float: left;
+    clear: right;
+}
+
+#losses {
+    height: 75px;
+    width: 225px;
+    background-color: white;
+    border: 3px solid #652762;
+    padding-top: 30px;
+    margin: 25px;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 20px;
+    text-align: center;
+    float: left;
+    clear: right;
+}
+
+
+.clearfix {
+    clear: both;
 }
